--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;1,200');
-App {
+.App {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -8,7 +8,9 @@ App {
 body {
   margin:  0;
   font-family: 'Poppins', sans-serif;
-
+}
+img{
+  width: 150px;
 }
 ul {
   list-style: none;
