--- a/src/Css/listCategories.css
+++ b/src/Css/listCategories.css
@@ -1,17 +1,33 @@
 .homePage{
     display:flex;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     /* width:200px; */
-    border: 1px solid black;
-    width: 80%;
-    margin: auto;
+    /* border: 1px solid black; */
+    /* width: 80%; */
+    /* margin-top: 40px; */
+    background-color: black
 }
 
 .listCategory {
     /* flex-wrap: wrap; */
      width:300px;
-     border: 1px solid red;
+     border: 5px solid rgb(210, 138, 138);
+     border-radius:50px ;
+     margin: 30px;
+     text-align: center;
+}
+.listCategory:hover{
+    background-color: rgb(210, 138, 138);
+    border:black;
+    /* color:white */
+}
+.linkText{
+    color: wheat;
+}
+.linkText:hover{
+    color: black;
 }
 .listCategory img{
     display: flex;
