--- a/src/Css/recipesCategory.css
+++ b/src/Css/recipesCategory.css
@@ -1,32 +1,45 @@
 .pageCategories{
     background-color: black;
-}
-.listMealsContainer {
     display:flex;
     align-items: center;
     flex-direction: column;
-    /* border: 1px solid black; */
-    /* width: 80%; */
-    margin: 60px ;
-    width:300px;
-     border: 5px solid rgb(210, 138, 138);
-     border-radius:50px ;
-     margin: 30px;
+}
+.listMealsContainer {
+    padding: 60px ;
+    /* width:800px; */
+    text-align: center;
+}
+.listMeals {
+    display: flex;
+     width:500px;
+     /* border-radius:50px ; */
+     /* margin: 30px; */
      text-align: center;
+     margin-bottom: 50px    ;    
+}
+.meal{
+    justify-content: center;
+    align-items: center;
 }
 .listMeals:hover{
-    background-color: rgb(210, 138, 138);
-    border:black;
+    /* background-color: rgb(210, 138, 138);
+    border:black; */
     /* color:white */
 }
-.linkText{
+h2{
     color: wheat;
+
 }
-.linkText:hover{
+/* .linkText:hover{
     color: black;
-}
+} */
 .listMeals img{
-    width:300px;
-     /* border: 1px solid red; */
-   
+    border: 5px solid rgb(210, 138, 138);
+    width: 150px;
+    border-radius: 50px;
+ display: flex;
+     /* border: 1px solid red; */  
+}
+.listMeals img:hover{
+    opacity:1;
 }
